--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#FFCA12</color>
-    <color name="colorPrimaryDark">#222222</color>
+    <color name="colorPrimaryDark">#FFFFFF</color>
     <color name="colorAccent">#D81B21</color>
-    <color name="colorAppToolBar">#101010</color>
-    <color name="colorDivider">#785D00</color>
+    <color name="colorAppToolBar">#FFFFFF</color>
+    <color name="colorDivider">#FFB400</color>
 </resources>
