--- a/app/src/main/res/layout/dialog_datapoint_tap.xml
+++ b/app/src/main/res/layout/dialog_datapoint_tap.xml
@@ -28,8 +28,8 @@
                 android:layout_weight="1"
                 android:text="TextView" />
 
-            <ImageView
-                android:id="@+id/imageView"
+            <ImageButton
+                android:id="@+id/removeInstance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/fab_margin"
