--- a/app/src/main/res/layout/dialog_datapoint_tap.xml
+++ b/app/src/main/res/layout/dialog_datapoint_tap.xml
@@ -13,11 +13,20 @@
         android:gravity="center|center_horizontal|center_vertical"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/txtDate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/mini_fab_margin"
+            android:layout_weight="1"
+            android:text="TextView" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:foregroundGravity="center"
+            android:layout_margin="@dimen/mini_fab_margin"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -32,7 +41,7 @@
                 android:id="@+id/removeInstance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/fab_margin"
+                android:layout_margin="@dimen/mini_fab_margin"
                 android:layout_weight="1"
                 app:srcCompat="@android:drawable/ic_menu_delete" />
         </LinearLayout>
