--- a/app/src/main/res/menu/index_menu.xml
+++ b/app/src/main/res/menu/index_menu.xml
@@ -7,6 +7,11 @@
             android:title="@string/nav_home" />
 
         <item
+            android:id="@+id/nav_workout"
+            android:icon="@android:drawable/ic_input_add"
+            android:title="@string/nav_workout" />
+
+        <item
             android:id="@+id/nav_settings"
             android:icon="@android:drawable/ic_input_add"
             android:title="@string/nav_settings" />
