--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#FFCA12</color>
-    <color name="colorPrimaryDark">#FFFFFF</color>
+    <color name="colorWhite">#FFFFFF</color>
     <color name="colorAccent">#D81B21</color>
     <color name="colorAppToolBar">#FF9800</color>
     <color name="colorDivider">#FFB400</color>
+
 </resources>
